fixing the education mobile break point

--- a/src/app/components/Education/Education.scss
+++ b/src/app/components/Education/Education.scss
@@ -54,7 +54,7 @@
     &__container{
         display: grid;
         grid-template-columns: 20% 80%;
-        gap: 1rem;
+        gap: 2rem;
     }
     &__slider{
         list-style-type: none;
@@ -130,7 +130,11 @@
     }
     &__details-period{
         color: $accent-color;
-
+        margin-left: 10px;
+    }
+    &__details-position-wrapper{
+        margin-right: 90px;
+        margin-left: 10px;
     }
     &__details-list{
         list-style-type: none;
@@ -144,7 +148,7 @@
         color: $light-brown;
         position: relative;
         font-weight: 500;
-        // right: 30%;
+        margin-right: 90px;
 
         &::before{
             position: absolute;
@@ -290,6 +294,7 @@
             color: $light-brown;
             position: relative;
             font-weight: 500;
+            margin-right: 0px;
             &::before{
                 position: absolute;
                 left: -20px;
@@ -432,6 +437,7 @@
             position: relative;
             font-weight: 500;
             @include text-large;
+            margin-right: 0px;
 
             &::before{
                 position: absolute;
