--- a/src/app/components/SideBar/SideBar.scss
+++ b/src/app/components/SideBar/SideBar.scss
@@ -4,7 +4,7 @@
 .sidebar{
     position: fixed;
     bottom: 0;
-    left: 4rem;
+    left: 1rem;
 
     &__list{
         list-style-type: none;
@@ -46,5 +46,11 @@
             transform: translateY(-4px);
             color: $theme-color;
         }
+    }
+    @include tablet{
+        left: 3rem;
+    }
+    @include desktop{
+        left: 4rem;
     }
 }
